--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title></title>
 </head>
-
+<link rel="stylesheet" href="style.css">
 <body>
 
     <header><h1>This my home page</h1></header>
