--- a/404-page.html
+++ b/404-page.html
@@ -10,6 +10,8 @@
         <nav id="navLinks">       
             <a href="index.html">Home Page</a>
             <a href="404-page.html">404 Page</a>
+            <a href="https://github.com/LRI-2020">Profile Page</a>
+
 
         </nav>
     </header>
@@ -24,7 +26,7 @@
             </p>
 
             <div class="button-container">
-                <button id="GoHomeButton" onclick="window.location.href='index.html'">Go To Home Page</button>
+                <button id="GoProfileButton" onclick="location.href='https\:/\/github.com/LRI-2020'">Go To Profile</button>
 
             </div>
 
